# Contexta

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
Business plan/: 00-vision-and-positioning.md  01-pricing-and-unit-economics.md  02-architecture-overview.md  03-backend-runtime.md  04-api-contract.md  05-database-strategy.md  06-polyglot-services.md  07-metering-and-billing.md  08-web-backend-integration.md  09-dashboard-spec.md  10-integrations.md  11-cli-and-sdk.md  12-deployment-topology.md  13-operations-and-security.md  14-roadmap-and-finances.md  15-retrieval-deep-dive.md  16-error-handling-and-failsafe.md  17-security-and-abuse-protection.md  18-sdk-first-product-contract.md  19-edge-cases-and-data-integrity.md  README.md
contexta/: __init__.py  db.py
docs/: .env.example  README.md  next.config.ts  package.json
tests/: __init__.py  conftest.py  test_api_keys.py  test_core_errors.py  test_core_schemas.py  test_core_types.py  test_deduplication.py  test_embedding_service.py  test_entity_resolver.py  test_entity_state_manager.py  test_extraction_worker.py  test_importance_framework.py  test_memories_and_sessions_api.py  test_memory_storage.py  test_observations_api.py  test_policy_engine.py  test_property_payload_validation.py  test_repositories.py  test_required_batch_12_24.py  test_retrieval_engine.py  test_schema_registry.py  test_scoring_engine.py  test_sensitive_filter.py  test_truth_maintenance.py
web/: .env.example  Dockerfile  next.config.ts  package-lock.json  (+2 more)
(+245 files in other folders)
