[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contexta"
version = "0.1.0"
description = "Contexta — Memory Intelligence Engine for AI Agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "redis==5.2.1",
    "celery[redis]==5.4.0",
    "pgvector==0.3.6",
    "alembic==1.14.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "structlog==24.3.0",
    "sentry-sdk[fastapi]==2.19.2",
    "pyjwt==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "httpx==0.28.1",
    "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.119.3",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["contexta"]
